# shearlet-extraction

./: .gitignore  .gitmodules  README.md  complex_resnet.py  compress_shearlets.ipynb  environment.yaml  minimal_shearlets.ipynb  shearlet_extraction.ipynb
examples/: baselines.py  example.py  example.sh  examples.ipynb  freak_analysis.ipynb  freakformer.ipynb  freakformer_cifar.ipynb  freakformer_cifar_hartley.ipynb  shearlet_compression_experimentsv2.ipynb  shearlet_compression_experimentsv3.ipynb  shearlet_module_minimal.ipynb  slurm_baselines.sh  slurm_example.sh
examples/open_set_hp3/: registry.db
examples/open_set_hp3/1134463104/: hparams.pkl
examples/open_set_hp3/1616821504/: hparams.pkl
examples/open_set_hp3/180364080/: hparams.pkl
examples/open_set_hp3/1826540032/: hparams.pkl
examples/open_set_hp3/2604800256/: hparams.pkl
examples/shearlet_hp/: registry.db
examples/shearlet_hp/1220686592/: hparams.pkl
examples/shearlet_hp/1611276672/: hparams.pkl
examples/test_code/: test.py
examples/wandb/: latest-run
examples/wandb/run-20250120_135825-ft38dcyw/: run-ft38dcyw.wandb
examples/wandb/run-20250120_135845-d7v69wci/: run-d7v69wci.wandb
experiments/: config.py  experiment.py  experiment.sh  hartley_shearlets.py  slurm_experiment.sh  utils.py
experiments/scripts/: config.py  loggers.py  shearlets.py  utils.py
shearlet-nn/: pyproject.toml
shearlet-nn/src/shearletNN/: complex_deit.py  complex_resnet.py  deit.py  layers.py  shearlet_utils.py  shearlets.py
shearlet-nn/src/shearletNN.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+4 files in other folders)
